<resources>
    <string name="app_name">NOWLocate</string>
    <string name="create_your_account">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="gender">Gender</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="forget_password_text">Enter the email connected to your account. We’ll send an email with instructions to reset your password.</string>
    <string name="reset_password">Reset Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password_login">Forgot password?</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="logout_button">Logout Button</string>
    <string name="create_report_button">Create Report Button</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_button">Back button</string>
    <string name="save_button">Save button</string>
    <string name="search_results">Search Results:</string>
    <string name="create_report">Create Report</string>
    <string name="item_name">Item name</string>
    <string name="short_description">Short description</string>
    <string name="description">Description</string>
    <string name="last_seen">Last seen</string>
    <string name="category">Category</string>
    <string name="add_report">Add Report</string>
    <string name="create_new_password">Create New Password</string>
    <string name="your_new_password_must_be_different_from_your_previous_used_password">Your new password must be different from your previous used password</string>
    <string name="save">Save</string>
    <string name="report_detail">Report Detail</string>
    <string name="reported_by">Reported by:</string>
    <string name="at_01_01_2000">at 01–01–2000</string>
    <string name="dynamic_button">Dynamic Button</string>
    <string name="delete_button">Delete Button</string>
    <string name="write_a_message">Write a message</string>
    <string name="edit_report">Edit report</string>
    <string name="descending">Descending</string>
    <string name="date">date</string>
    <string name="last_message">Last message</string>
    <string name="please_sign_in_to_continue">Please sign in to continue</string>
    <string name="register">Register</string>
	<string name="filter_items">%1$s Items</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="report_name">Report Name</string>
    <string name="report_category">Report Category</string>
    <string name="report_short_description">Report Short Description</string>
    <string name="profile_image">Profile Image</string>
    <string name="describe_your_item">Describe your item</string>
    <string name="search_conversation">Search Conversation</string>
    <string name="conversation">Conversation</string>
	<string name="send">Send</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
	<string name="todo">TODO</string>
    <string name="personal_information">Personal Information</string>
    <string name="create_an_account_to_continue">Create an account to continue</string>
    <string name="login">Login</string>
    <string name="sort">Sort</string>
    <string name="report_name_empty" type="id">Report name must not be empty</string>
    <string name="report_category_empty" type="id">Report category must not be empty</string>
    <string name="report_short_description_empty" type="id">Short description must not be empty</string>
    <string name="report_long_description_empty" type="id">Description must not be empty</string>
    <string name="report_last_seen_empty" type="id">Last seen must not be empty</string>
    <string name="report_image_empty" type="id">Image must not be empty</string>
    <string name="report_name_invalid" type="id">Report name must be at least 2 words</string>
    <string name="report_last_seen_invalid" type="id">Last seen must have a substring in a dd-mm-yyyy
        format
    </string>
    <string name="report_short_description_invalid" type="id">Short description length must not be more than 25 characters
    </string>
    <string name="report_long_description_invalid" type="id">Description length must not be more than 500 characters
    </string>
    <string name="report_image_invalid" type="id">Image must be uploaded</string>
    <string name="empty_field_error_message" type="id">All fields must not be empty</string>
    <string name="alphanumeric_error_message" type="id">Password must be alphanumeric</string>
    <string name="password_not_match_error_message" type="id">Confirm password must be the same as password
    </string>
    <string name="first_name_empty" type="id">First name must not be empty</string>
    <string name="last_name_empty" type="id">Last name must not be empty</string>
    <string name="username_empty" type="id">Username must not be empty</string>
    <string name="email_empty" type="id">Email must not be empty</string>
    <string name="gender_empty" type="id">Gender must be selected</string>
    <string name="email_not_found">Email not found</string>
    <string name="reset_password_email_sent">Check your email to reset password</string>
    <string name="unknown_error">An unknown error occurred</string>
    <string name="confirmation">Confirmation</string>
    <string name="change_password_confirmation">Are you sure to change your password?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="create_report_confirmation">Are you sure to create this report?</string>
    <string name="select_category">Select Category</string>
    <string name="edit_profile_confirmation">Are you sure to edit your profile?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="edit_report_confirmation">Are you sure to save this report?</string>
    <string name="delete_report_confirmation">Are you sure to delete this report?</string>
    <string name="password_empty">Password must not be empty</string>
    <string name="ascending">Ascending</string>
</resources>