<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/cvReport"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_margin="8dp"
	app:cardCornerRadius="10dp"
	app:cardElevation="2dp">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="200dp">

			<ImageView
				android:id="@+id/ivReportImage"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:contentDescription="@string/profile_image"
				android:scaleType="centerCrop"
				android:src="@drawable/baseline_person_24" />

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="20dp">

			<FrameLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">

				<TextView
					android:id="@+id/tvReportName"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="start|center"
					android:layout_marginBottom="5dp"
					android:fontFamily="@font/inter_bold"
					android:text="@string/report_name"
					android:textSize="20sp" />

				<androidx.cardview.widget.CardView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="end"
					app:cardBackgroundColor="@color/light_blue"
					app:cardCornerRadius="10dp">

					<TextView
						android:id="@+id/tvReportCategory"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:fontFamily="@font/inter_medium"
						android:padding="5dp"
						android:paddingStart="10dp"
						android:paddingEnd="10dp"
						android:text="@string/report_category"
						android:textColor="@color/white"
						android:textSize="12.5sp" />
				</androidx.cardview.widget.CardView>

			</FrameLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="start|center"
				android:orientation="horizontal"
				tools:ignore="UseCompoundDrawables">

				<ImageView
					android:layout_width="16dp"
					android:layout_height="16dp"
					android:layout_marginEnd="5dp"
					android:contentDescription="@string/date"
					android:src="@drawable/outline_calendar_month_24" />

				<TextView
					android:id="@+id/tvReportDate"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:fontFamily="@font/inter_medium"
					android:text="@string/date"
					android:textSize="15sp" />
			</LinearLayout>

			<TextView
				android:id="@+id/tvReportShortDescription"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:fontFamily="@font/inter"
				android:text="@string/report_short_description"
				android:textColor="@color/dark_gray"
				android:textSize="12.5sp" />
		</LinearLayout>

	</LinearLayout>

</androidx.cardview.widget.CardView>