<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvConversationCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_view_profile_image"
            android:src="@drawable/baseline_person_black_24"
            android:layout_width="75dp"
            android:layout_height="75dp"
            app:civ_border_width="1dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_view_first_name"
                    android:text="@string/first_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_bold"
                    android:textSize="15dp"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:id="@+id/text_view_last_name"
                    android:text="@string/last_name"
                    android:layout_width="wrap_content"
                    android:fontFamily="@font/inter_bold"
                    android:textSize="15dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/text_view_last_time"
                    android:textAlignment="textEnd"
                    android:layout_weight="1"
                    android:text="@string/date"
                    android:fontFamily="@font/inter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <TextView
                android:id="@+id/text_view_last_message"
                android:text="@string/last_message"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/inter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>