<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context=".views.activity.ChangePasswordActivity">

	<data>

		<variable
			name="viewModel"
			type="edu.bluejack23_1.nowlocate.viewModels.ChangePasswordViewModel" />
	</data>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">

		<FrameLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="10dp">

			<androidx.cardview.widget.CardView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				app:cardCornerRadius="200dp">

				<ImageButton
					android:id="@+id/button_back"
					android:layout_width="25dp"
					android:layout_height="25dp"
					android:layout_gravity="center"
					android:layout_margin="4dp"
					android:background="@color/transparent"
					android:contentDescription="@string/logout_button"
					android:scaleType="fitCenter"
					android:src="@drawable/baseline_arrow_back_24_2" />
			</androidx.cardview.widget.CardView>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_gravity="center"
				android:fontFamily="@font/inter_bold"
				android:gravity="center"
				android:text="@string/change_password"
				android:textColor="@color/black"
				android:textSize="20sp" />
		</FrameLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:orientation="vertical"
			android:padding="25dp">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="10dp"
				android:fontFamily="@font/inter_bold"
				android:text="@string/create_new_password"
				android:textAlignment="textStart"
				android:textSize="24sp"
				android:textStyle="bold" />

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:fontFamily="@font/inter"
				android:text="@string/your_new_password_must_be_different_from_your_previous_used_password"
				android:textAlignment="textStart" />

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			android:gravity="center_horizontal"
			android:orientation="vertical"
			android:padding="25dp">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">

				<com.google.android.material.card.MaterialCardView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="10dp"
					app:cardBackgroundColor="@color/light_blue_transparent"
					app:cardCornerRadius="10dp">

					<com.google.android.material.textfield.TextInputLayout
						style="@style/InputLayout"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/old_password"
						app:endIconMode="password_toggle"
						tools:ignore="RtlSymmetry">

						<com.google.android.material.textfield.TextInputEditText
							android:id="@+id/edit_text_old_password"
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:background="@color/transparent"
							android:fontFamily="@font/inter_medium"
							android:inputType="textPassword"
							android:text="@={viewModel.oldPassword}"
							android:textColor="#000" />

					</com.google.android.material.textfield.TextInputLayout>
				</com.google.android.material.card.MaterialCardView>
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">

				<com.google.android.material.card.MaterialCardView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="10dp"
					app:cardBackgroundColor="@color/light_blue_transparent"
					app:cardCornerRadius="10dp">

					<com.google.android.material.textfield.TextInputLayout
						style="@style/InputLayout"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/new_password"
						app:endIconMode="password_toggle"
						tools:ignore="RtlSymmetry">

						<com.google.android.material.textfield.TextInputEditText
							android:id="@+id/edit_text_new_password"
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:background="@color/transparent"
							android:fontFamily="@font/inter_medium"
							android:inputType="textPassword"
							android:text="@={viewModel.newPassword}"
							android:textColor="#000" />

					</com.google.android.material.textfield.TextInputLayout>
				</com.google.android.material.card.MaterialCardView>
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="vertical">

				<com.google.android.material.card.MaterialCardView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="10dp"
					app:cardBackgroundColor="@color/light_blue_transparent"
					app:cardCornerRadius="10dp">

					<com.google.android.material.textfield.TextInputLayout
						style="@style/InputLayout"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/confirm_password"
						app:endIconMode="password_toggle"
						tools:ignore="RtlSymmetry">

						<com.google.android.material.textfield.TextInputEditText
							android:id="@+id/edit_text_confirm_password"
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:background="@color/transparent"
							android:fontFamily="@font/inter_medium"
							android:inputType="textPassword"
							android:text="@={viewModel.confirmPassword}"
							android:textColor="#000" />

					</com.google.android.material.textfield.TextInputLayout>
				</com.google.android.material.card.MaterialCardView>

			</LinearLayout>

		</LinearLayout>

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:paddingHorizontal="25dp">

			<Button
				android:id="@+id/button_save"
				android:layout_width="match_parent"
				android:layout_height="55dp"
				android:layout_marginBottom="20dp"
				android:width="250dp"
				android:backgroundTint="@color/light_blue"
				android:fontFamily="@font/inter_medium"
				android:text="@string/save"
				android:textSize="20sp"
				app:cornerRadius="10dp" />

		</RelativeLayout>

	</LinearLayout>

</layout>