<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context=".views.activity.RegisterActivity">

	<data>

		<variable
			name="viewModel"
			type="edu.bluejack23_1.nowlocate.viewModels.RegisterViewModel" />
	</data>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:padding="30dp">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:orientation="vertical">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:fontFamily="@font/open_sans_bold"
				android:text="@string/create_your_account"
				android:textAlignment="textStart"
				android:textColor="@color/light_blue"
				android:textSize="40sp"
				android:textStyle="bold" />

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:fontFamily="@font/open_sans_bold"
				android:text="@string/create_an_account_to_continue"
				android:textAlignment="textStart"
				android:textColor="@color/dark_gray"
				android:textSize="15sp"
				android:textStyle="bold" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:orientation="vertical">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="10dp"
				android:orientation="horizontal">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginEnd="5sp"
					android:layout_weight="1"
					android:gravity="start"
					android:orientation="vertical"
					app:flexDirection="column">

					<com.google.android.material.card.MaterialCardView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						app:cardBackgroundColor="@color/light_blue_transparent"
						app:cardCornerRadius="10dp">

						<com.google.android.material.textfield.TextInputLayout
							style="@style/InputLayout"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:autofillHints="emailAddress"
							android:fontFamily="@font/inter_medium"
							android:hint="@string/first_name"
							app:endIconMode="none"
							tools:ignore="RtlSymmetry">

							<com.google.android.material.textfield.TextInputEditText
								android:id="@+id/etFirstName"
								android:layout_width="match_parent"
								android:layout_height="match_parent"
								android:background="@color/transparent"
								android:inputType="text"
								android:text="@={viewModel.firstname}"
								android:textColor="#000" />

						</com.google.android.material.textfield.TextInputLayout>
					</com.google.android.material.card.MaterialCardView>
				</LinearLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginStart="5sp"
					android:layout_weight="1"
					android:gravity="start"
					android:orientation="vertical"
					app:flexDirection="column">

					<com.google.android.material.card.MaterialCardView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						app:cardBackgroundColor="@color/light_blue_transparent"
						app:cardCornerRadius="10dp">

						<com.google.android.material.textfield.TextInputLayout
							style="@style/InputLayout"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:fontFamily="@font/inter_medium"
							android:hint="@string/last_name"
							app:endIconMode="none"
							tools:ignore="RtlSymmetry">

							<com.google.android.material.textfield.TextInputEditText
								android:id="@+id/etLastName"
								android:layout_width="match_parent"
								android:layout_height="match_parent"
								android:background="@color/transparent"
								android:inputType="text"
								android:text="@={viewModel.lastname}"
								android:textColor="#000" />

						</com.google.android.material.textfield.TextInputLayout>
					</com.google.android.material.card.MaterialCardView>
				</LinearLayout>
			</LinearLayout>

			<com.google.android.material.card.MaterialCardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:cardBackgroundColor="@color/light_blue_transparent"
				android:layout_marginBottom="10dp"
				app:cardCornerRadius="10dp">

				<com.google.android.material.textfield.TextInputLayout
					style="@style/InputLayout"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/email"
					app:endIconMode="none"
					tools:ignore="RtlSymmetry">

					<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/etEmail"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:background="@color/transparent"
						android:fontFamily="@font/inter_medium"
						android:inputType="text"
						android:text="@={viewModel.email}"
						android:textColor="#000" />

				</com.google.android.material.textfield.TextInputLayout>
			</com.google.android.material.card.MaterialCardView>

			<com.google.android.material.card.MaterialCardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:cardBackgroundColor="@color/light_blue_transparent"
				android:layout_marginBottom="10dp"
				app:cardCornerRadius="10dp">

				<com.google.android.material.textfield.TextInputLayout
					style="@style/InputLayout"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/username"
					app:endIconMode="none"
					tools:ignore="RtlSymmetry">

					<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/etUsername"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:background="@color/transparent"
						android:fontFamily="@font/inter_medium"
						android:inputType="text"
						android:text="@={viewModel.username}"
						android:textColor="#000" />

				</com.google.android.material.textfield.TextInputLayout>
			</com.google.android.material.card.MaterialCardView>

			<com.google.android.material.card.MaterialCardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:cardBackgroundColor="@color/light_blue_transparent"
				android:layout_marginBottom="10dp"
				app:cardCornerRadius="10dp">

				<com.google.android.material.textfield.TextInputLayout
					style="@style/InputLayout"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/password"
					app:endIconMode="password_toggle"
					tools:ignore="RtlSymmetry">

					<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/etPassword"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:background="@color/transparent"
						android:fontFamily="@font/inter_medium"
						android:inputType="textPassword"
						android:text="@={viewModel.password}"
						android:textColor="#000" />

				</com.google.android.material.textfield.TextInputLayout>
			</com.google.android.material.card.MaterialCardView>

			<com.google.android.material.card.MaterialCardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:cardBackgroundColor="@color/light_blue_transparent"
				android:layout_marginBottom="10dp"
				app:cardCornerRadius="10dp">

				<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/etConfirmPasswordLayout"
					style="@style/InputLayout"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/confirm_password"
					app:endIconMode="password_toggle"
					tools:ignore="RtlSymmetry">

					<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/etConfirmPassword"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:background="@color/transparent"
						android:fontFamily="@font/inter_medium"
						android:inputType="textPassword"
						android:text="@={viewModel.confirmPassword}"
						android:textColor="#000" />

				</com.google.android.material.textfield.TextInputLayout>
			</com.google.android.material.card.MaterialCardView>

			<com.google.android.material.card.MaterialCardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:cardBackgroundColor="@color/light_blue_transparent"
				android:layout_marginBottom="10dp"
				app:cardCornerRadius="10dp">

				<Spinner
					android:id="@+id/spinnerGender"
					android:layout_width="match_parent"
					android:layout_height="55dp"
					android:background="@drawable/edittext_border"
					android:fontFamily="@font/inter_medium"
					android:paddingHorizontal="10dp"
					android:textColor="@color/black"
					android:theme="@style/SpinnerTheme" />
			</com.google.android.material.card.MaterialCardView>

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="4"
			android:gravity="center|bottom"
			android:orientation="vertical">

			<Button
				android:id="@+id/btnSignUp"
				android:layout_width="wrap_content"
				android:layout_height="55dp"
				android:layout_marginBottom="20dp"
				android:width="250dp"
				android:backgroundTint="@color/light_blue"
				android:fontFamily="@font/open_sans_bold"
				android:text="@string/sign_up"
				android:textSize="20sp"
				app:cornerRadius="10dp" />

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:orientation="horizontal">

				<TextView
					android:id="@+id/tvAlreadyHave"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:fontFamily="@font/open_sans"
					android:text="@string/already_have_an_account"
					android:textSize="15sp" />

				<TextView
					android:id="@+id/tvLogin"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:fontFamily="@font/open_sans"
					android:paddingLeft="5dp"
					android:text="@string/login"
					android:textColor="@color/light_blue"
					android:textSize="15sp" />
			</LinearLayout>


		</LinearLayout>
	</LinearLayout>
</layout>