<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.ForgotPasswordActivity">

    <data>
        <variable
            name="viewModel"
            type="edu.bluejack23_1.nowlocate.viewModels.ForgotPasswordViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/blue"
            app:titleTextColor="@color/white"
            android:elevation="4dp"
            android:theme="@style/ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/baseline_arrow_back_ios_24"
                android:background="@color/blue"
                android:contentDescription="@string/back_button"
                />
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:padding="5dp"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:text="DISINI LOGO"
                android:fontFamily="@font/open_sans_bold"
                android:gravity="center"
                android:textSize="25sp"
                android:paddingVertical="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/forget_password_text"
                android:gravity="center|start"
                android:textSize="16sp"
                android:paddingVertical="20dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_bold"
                android:gravity="start"
                android:paddingBottom="5dp"
                android:text="@string/email"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:background="@drawable/edittext_border"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                android:paddingStart="10dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_email_24"
                    />
                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:autofillHints=""
                    android:fontFamily="@font/open_sans"
                    android:background="@drawable/edittext_border"
                    android:hint="@string/email"
                    android:inputType="text"
                    android:padding="5dp"
                    android:textSize="15sp"
                    android:text="@={viewModel.email}"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_marginBottom="20dp"
                android:width="250dp"
                android:backgroundTint="#339FDC"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/reset_password"
                android:textSize="20sp"
                app:cornerRadius="10dp" />


        </LinearLayout>
    </LinearLayout>

</layout>